--- a/Conit.WEB/Views/Shared/_Layout.cshtml
+++ b/Conit.WEB/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                 <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Companies") ? "active" : "")">
                     @Html.ActionLink("Companies", "Index", "Companies", routeValues: null, htmlAttributes: new { @class = "nav-link" })
                 </li>
-                <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Cars") ? "active" : "")">
-                    @Html.ActionLink("Cars", "Index", "Cars", routeValues: null, htmlAttributes: new { @class = "nav-link" })
+                <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Parts") ? "active" : "")">
+                    @Html.ActionLink("Parts", "Index", "Parts", routeValues: null, htmlAttributes: new { @class = "nav-link" })
                 </li>
                 <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "About" & ViewContext.RouteData.Values["Controller"].ToString() == "Home") ? "active" : "")">
                     @Html.ActionLink("About", "About", "Home", routeValues: null, htmlAttributes: new { @class = "nav-link" })
