--- a/Conit.WEB/Views/Shared/_Layout.cshtml
+++ b/Conit.WEB/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary my-nav-bar">
-        @Html.ActionLink("CarRental", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        @Html.ActionLink("CONIT", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
