Product Views and API added.

--- a/Conit.WEB/Views/Companies/CompanyForm.cshtml
+++ b/Conit.WEB/Views/Companies/CompanyForm.cshtml
@@ -78,7 +78,7 @@
                 return function (e) {
                     // Render thumbnail.
                     clearChild();
-                    document.getElementById('output').innerHTML = ['<img class="img-add-car" title="', escape(theFile.name), '" src="', e.target.result, '" />'].join('');
+                    document.getElementById('output').innerHTML = ['<img class="img-add-company" title="', escape(theFile.name), '" src="', e.target.result, '" />'].join('');
                 };
             })(f);
             // Read in the image file as a data URL.
