Product controllers complete.

--- a/Conit.WEB/Views/Products/ProductForm.cshtml
+++ b/Conit.WEB/Views/Products/ProductForm.cshtml
@@ -6,7 +6,7 @@
     }
     else
     {
-        ViewBag.Title = $"{Model.CompanyDto.Name} {Model.Name}";
+        ViewBag.Title = $"{Model.Name}";
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
