--- a/Conit.WEB/Views/Products/ProductsList.cshtml
+++ b/Conit.WEB/Views/Products/ProductsList.cshtml
@@ -24,10 +24,10 @@
             <tr scope="row">
                 <td><img src='@product.PictureId' alt='No image.' class='img-thumbnail-company' /></td>
                 <td>@Html.ActionLink($"{product.CompanyDto.Name}", "Details", "Companies", htmlAttributes: null, routeValues: new { companyDtoId = product.CompanyDto.Id })</td>
-                <td>@Html.ActionLink($"{product.Name}", "Details", "Companies", htmlAttributes: null, routeValues: new { partDtoId = product.Id })</td>
+                <td>@Html.ActionLink($"{product.Name}", "Details", "Products", htmlAttributes: null, routeValues: new { productDtoId = product.Id })</td>
                 <td>@product.Description</td>
-                <td>@Html.ActionLink("Edit", "Edit", "Parts", htmlAttributes: null, routeValues: new { partDtoId = product.Id })</td>
-                <td>@Html.ActionLink("Delete", "Delete", "Parts", htmlAttributes: null, routeValues: new { partDtoId = product.Id })</td>
+                <td>@Html.ActionLink("Edit", "Edit", "Products", htmlAttributes: null, routeValues: new { productDtoId = product.Id })</td>
+                <td>@Html.ActionLink("Delete", "Delete", "Products", htmlAttributes: null, routeValues: new { productDtoId = product.Id })</td>
             </tr>
         }
     </tbody>
