--- a/Conit.WEB/Views/Shared/_Layout.cshtml
+++ b/Conit.WEB/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Companies") ? "active" : "")">
                     @Html.ActionLink("Companies", "Index", "Companies", routeValues: null, htmlAttributes: new { @class = "nav-link" })
                 </li>
+                <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Products") ? "active" : "")">
+                    @Html.ActionLink("Products", "Index", "Products", routeValues: null, htmlAttributes: new { @class = "nav-link" })
+                </li>
                 <li class="nav-item @((ViewContext.RouteData.Values["Action"].ToString() == "Index" & ViewContext.RouteData.Values["Controller"].ToString() == "Parts") ? "active" : "")">
                     @Html.ActionLink("Parts", "Index", "Parts", routeValues: null, htmlAttributes: new { @class = "nav-link" })
                 </li>
