--- a/Conit.WEB/Views/Home/Index.cshtml
+++ b/Conit.WEB/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>CONIT</h1>
+    <p class="lead">CONIT is a free web platform for building different products with our instructions and checkong part lists.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
