--- a/Conit.WEB/Views/Parts/PartDetails.cshtml
+++ b/Conit.WEB/Views/Parts/PartDetails.cshtml
@@ -28,3 +28,42 @@
     @Html.LabelFor(p => p.Length)
     <h5>@Model.Length</h5>
 </div>
+<table id="products" class="table table-hover">
+    <thead>
+        <tr scope="row">
+            <th>Picture</th>
+            <th>Company</th>
+            <th>Name</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model.ProductDtos)
+        {
+            <tr scope="row">
+                <td><img src='@product.PictureId' alt='No image.' class='img-thumbnail-company' /></td>
+                <td>@Html.ActionLink($"{product.CompanyDto.Name}", "Details", "Companies", htmlAttributes: null, routeValues: new { companyDtoId = product.CompanyDto.Id })</td>
+                <td>@Html.ActionLink($"{product.Name}", "Details", "Products", htmlAttributes: null, routeValues: new { productDtoId = product.Id })</td>
+                <td>@product.Description</td>
+            </tr>
+        }
+    </tbody>
+</table>
+@section scripts{
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#products').DataTable({
+                columns: [
+                    {
+                        orderable: false
+                    },
+                    {},
+                    {},
+                    {}
+                ]
+            });
+        });
+    </script>
+}
